# dormlife_website

./: .gitignore  .pre-commit-config.yaml  README.md  biome.json  pyproject.toml
src/backend/dormlife/: admin.py  apps.py  models.py
src/backend/dormlife/migrations/: 0001_initial.py
src/backend/showcard_website_api/: settings.py  urls.py
