[project]
name = "showcard-website"
version = "0.0.1"
description = "A simple project for django back-end"
authors = [{ name = "asmeralt", email = "bohdan.vasylyshyn@pm.me" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
    "markdown (>=3.9,<4.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.18.2"
django-stubs = "^5.2.5"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
